[package]
name = "rust-risen-prototypying"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.8", features = ["cargo"] }
rand = "0.8.5"
rodio = "0.17.1"

[dependencies.synthrs]
git = "https://github.com/gyng/synthrs"
rev = "77e062f"